# py-libzfs

./: Makefile.in  README.md  configure  configure.ac  libzfs.pyx  nvpair.pxi
.github/workflows/: ci.yml
debian/: control
pxd/: config.pxi.in  libzfs.pxd  sendflags.pxi.in  spa_features.pxi.in  userquota_props.pxi.in  zfs.pxd  zpool_status.pxi.in
